Make slider yes selected as default

--- a/admin/tmpl/custom-gallery-slick-form-compact.html
+++ b/admin/tmpl/custom-gallery-slick-form-compact.html
@@ -5,9 +5,9 @@
         <label class="setting">
             <span>Make slider?</span>
             <select class="type" id="slick-select" data-setting="slick_use_slick">
-                <option value="" selected>Choose</option>
+                <option value="">Choose</option>
                 <option value="0">No</option>
-                <option value="1">Yes</option>
+                <option value="1" selected>Yes</option>
             </select>
         </label>
     </div>
